# singlecell-perturbation-meta

./: .gitignore  DATABASE_AND_INGESTION_PLAN.md  PIPELINE_SUITE_PLAN.md  README.md  pipeline_metaanalisis_single_cell_perturbaciones.md  pyproject.toml
config/: scperturb_mvp_files.json
figures/scperturb_mvp_v0.1/: plot-manifest.json  visual_summary.md
figures/scperturb_mvp_v0.1_pooled/: plot-manifest.json  visual_summary.md
metadata/audits/: replogle_processed_verification.json  scperturb_mvp_primary_source_validation.md
metadata/releases/: scperturb_mvp_v0.1.json
scripts/: aggregate_data.py  contrast_data.py  curate_data.py  effect_data.py  fetch_data.py  harmonize_data.py  meta_data.py  plot_results.py  profile_data.py  qc_data.py  release_data.py
src/scmeta_aggregate/: __init__.py  __main__.py  aggregate.py  cli.py
src/scmeta_contrast/: __init__.py  __main__.py  cli.py  contrast.py
src/scmeta_curate/: __init__.py  __main__.py  adamson.py  cli.py  h5ad.py  replogle.py
src/scmeta_effects/: __init__.py  __main__.py  cli.py  effects.py
src/scmeta_fetch/: __init__.py  __main__.py  cli.py  download.py  http.py  models.py  zenodo.py
src/scmeta_harmonize/: __init__.py  __main__.py  cli.py  harmonize.py
src/scmeta_meta/: __init__.py  cli.py  meta.py
src/scmeta_plots/: __init__.py  __main__.py  cli.py  plots.py
tests/: test_aggregate.py  test_contrast.py  test_curation.py  test_download.py  test_effects.py  test_harmonize.py  test_meta.py  test_models.py  test_plots.py  test_profile.py  test_qc.py  test_release.py  test_zenodo.py
(+27 files in other folders)
